src/snapshots/tests__fof_defined_plain_term.snap
---
source: src/tests.rs
expression: parsed
---
Constant(
    DefinedConstant(
        DefinedFunctor(
            AtomicDefinedWord(
                DollarWord(
                    LowerWord(
                        "defined_plain_term",
                    ),
                ),
            ),
        ),
    ),
)
