src/snapshots/tests__fof_defined_term.snap
---
source: src/tests.rs
expression: parsed
---
Atomic(
    FofDefinedAtomicTerm(
        Constant(
            DefinedConstant(
                DefinedFunctor(
                    AtomicDefinedWord(
                        DollarWord(
                            LowerWord(
                                "defined_term",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
