src/snapshots/tests__fof_formula-7.snap
---
source: src/tests.rs
expression: parsed
---
Logic(
    Binary(
        Assoc(
            Or(
                FofOrFormula(
                    [
                        Unitary(
                            Atomic(
                                Defined(
                                    Plain(
                                        FofDefinedPlainFormula(
                                            Constant(
                                                DefinedConstant(
                                                    DefinedFunctor(
                                                        AtomicDefinedWord(
                                                            DollarWord(
                                                                LowerWord(
                                                                    "true",
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                        Unitary(
                            Atomic(
                                Defined(
                                    Plain(
                                        FofDefinedPlainFormula(
                                            Constant(
                                                DefinedConstant(
                                                    DefinedFunctor(
                                                        AtomicDefinedWord(
                                                            DollarWord(
                                                                LowerWord(
                                                                    "false",
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ],
                ),
            ),
        ),
    ),
)
