src/snapshots/tests__fof_formula.snap
---
source: src/tests.rs
expression: parsed
---
FofFormula(
    Unitary(
        Atomic(
            Plain(
                FofPlainAtomicFormula(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "p",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
