src/snapshots/tests__fof_function_term-3.snap
---
source: src/tests.rs
expression: parsed
---
Defined(
    FofDefinedTerm(
        FofDefinedAtomicTerm(
            FofDefinedPlainTerm(
                DefinedConstant(
                    DefinedFunctor(
                        AtomicDefinedWord(
                            DollarWord(
                                LowerWord(
                                    "defined",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
