src/snapshots/tests__fof_infix_unary.snap
---
source: src/tests.rs
expression: parsed
---
FofInfixUnary {
    left: Function(
        Plain(
            Function(
                Functor(
                    Lower(
                        LowerWord(
                            "f",
                        ),
                    ),
                ),
                FofArguments(
                    [
                        Variable(
                            Variable(
                                UpperWord(
                                    "X",
                                ),
                            ),
                        ),
                    ],
                ),
            ),
        ),
    ),
    op: InfixInequality,
    right: Function(
        Plain(
            Constant(
                Functor(
                    Lower(
                        LowerWord(
                            "c",
                        ),
                    ),
                ),
            ),
        ),
    ),
}
