src/snapshots/tests__fof_logic_formula-11.snap
---
source: src/tests.rs
expression: parsed
---
Binary(
    Nonassoc(
        FofBinaryNonassoc {
            left: Unary(
                Unary(
                    UnaryConnective,
                    Unitary(
                        Atomic(
                            Plain(
                                FofPlainAtomicFormula(
                                    Constant(
                                        Functor(
                                            Lower(
                                                LowerWord(
                                                    "p",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
            op: LRImplies,
            right: Unitary(
                Atomic(
                    Plain(
                        FofPlainAtomicFormula(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "q",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        },
    ),
)
