src/snapshots/tests__fof_logic_formula-2.snap
---
source: src/tests.rs
expression: parsed
---
NonAssoc(
    LRImplies,
    Proposition(
        LowerWord(
            "p",
        ),
    ),
    Proposition(
        LowerWord(
            "q",
        ),
    ),
)
