src/snapshots/tests__fof_logic_formula-3.snap
---
source: src/tests.rs
expression: parsed
---
Assoc(
    And,
    [
        Proposition(
            LowerWord(
                "p",
            ),
        ),
        Proposition(
            LowerWord(
                "q",
            ),
        ),
    ],
)
